varnish/snapshots/event1_event@docs.snap
---
source: varnish-macros/src/tests.rs
snapshot_kind: text
---
<!--

   !!!!!!  WARNING: DO NOT EDIT THIS FILE!

   This file was generated from the Varnish VMOD source code.
   It will be automatically updated on each build.

-->
# Varnish Module (VMOD) `event`

```vcl
// Place import statement at the top of your VCL file
// This loads vmod from a standard location
import event;

// Or load vmod from a specific file
import event from "path/to/libevent.so";
```
