varnish/snapshots/event3_event3@docs.snap
---
source: varnish-macros/src/tests.rs
snapshot_kind: text
---
<!--

   !!!!!!  WARNING: DO NOT EDIT THIS FILE!

   This file was generated from the Varnish VMOD source code.
   It will be automatically updated on each build.

-->
# Varnish Module (VMOD) `event3`

```vcl
// Place import statement at the top of your VCL file
// This loads vmod from a standard location
import event3;

// Or load vmod from a specific file
import event3 from "path/to/libevent3.so";
```

### Function `VOID access()`

### Object `Obj1`

```vcl
// Create a new instance of the object in your VCL init function
sub vcl_init {
    new new = Obj1.new();
}
```

#### Method `VOID obj_access()`

### Object `Obj2`

```vcl
// Create a new instance of the object in your VCL init function
sub vcl_init {
    new new = Obj2.new();
}
```

#### Method `VOID obj_access()`
