varnish/snapshots/event3_event3@model.snap
---
source: varnish-macros/src/tests.rs
snapshot_kind: text
---
VmodInfo {
    params: VmodParams {
        docs: None,
    },
    ident: "event3",
    docs: "",
    funcs: [
        FuncInfo {
            func_type: Event,
            ident: "on_event",
            docs: "",
            has_optional_args: false,
            args: [
                ParamTypeInfo {
                    ident: "ctx",
                    docs: "",
                    ty: Context {
                        is_mut: false,
                    },
                },
                ParamTypeInfo {
                    ident: "event",
                    docs: "",
                    ty: Event,
                },
                ParamTypeInfo {
                    ident: "vcl",
                    docs: "",
                    ty: SharedPerVclMut,
                },
                ParamTypeInfo {
                    ident: "vdp",
                    docs: "",
                    ty: DeliveryFilters,
                },
                ParamTypeInfo {
                    ident: "vfp",
                    docs: "",
                    ty: FetchFilters,
                },
            ],
            output_ty: Default,
            out_result: true,
        },
        FuncInfo {
            func_type: Function,
            ident: "access",
            docs: "",
            has_optional_args: false,
            args: [
                ParamTypeInfo {
                    ident: "vcl",
                    docs: "",
                    ty: SharedPerVclRef,
                },
            ],
            output_ty: Default,
            out_result: false,
        },
    ],
    objects: [
        ObjInfo {
            ident: "Obj1",
            docs: "",
            constructor: FuncInfo {
                func_type: Constructor,
                ident: "new",
                docs: "",
                has_optional_args: false,
                args: [
                    ParamTypeInfo {
                        ident: "vcl",
                        docs: "",
                        ty: SharedPerVclMut,
                    },
                ],
                output_ty: SelfType,
                out_result: false,
            },
            destructor: FuncInfo {
                func_type: Destructor,
                ident: "_fini",
                docs: "",
                has_optional_args: false,
                args: [],
                output_ty: Default,
                out_result: false,
            },
            funcs: [
                FuncInfo {
                    func_type: Method,
                    ident: "obj_access",
                    docs: "",
                    has_optional_args: false,
                    args: [
                        ParamTypeInfo {
                            ident: "self",
                            docs: "",
                            ty: SelfType,
                        },
                        ParamTypeInfo {
                            ident: "vcl",
                            docs: "",
                            ty: SharedPerVclRef,
                        },
                    ],
                    output_ty: Default,
                    out_result: false,
                },
            ],
        },
        ObjInfo {
            ident: "Obj2",
            docs: "",
            constructor: FuncInfo {
                func_type: Constructor,
                ident: "new",
                docs: "",
                has_optional_args: false,
                args: [
                    ParamTypeInfo {
                        ident: "vdp",
                        docs: "",
                        ty: DeliveryFilters,
                    },
                ],
                output_ty: SelfType,
                out_result: false,
            },
            destructor: FuncInfo {
                func_type: Destructor,
                ident: "_fini",
                docs: "",
                has_optional_args: false,
                args: [],
                output_ty: Default,
                out_result: false,
            },
            funcs: [
                FuncInfo {
                    func_type: Method,
                    ident: "obj_access",
                    docs: "",
                    has_optional_args: false,
                    args: [
                        ParamTypeInfo {
                            ident: "self",
                            docs: "",
                            ty: SelfType,
                        },
                    ],
                    output_ty: Default,
                    out_result: false,
                },
            ],
        },
    ],
    shared_types: SharedTypes {
        shared_per_task_ty: None,
        shared_per_vcl_ty: Some(
            "PerVcl",
        ),
    },
}
