varnish/snapshots/event4_event4@docs.snap
---
source: varnish-macros/src/tests.rs
snapshot_kind: text
---
<!--

   !!!!!!  WARNING: DO NOT EDIT THIS FILE!

   This file was generated from the Varnish VMOD source code.
   It will be automatically updated on each build.

-->
# Varnish Module (VMOD) `event4`

```vcl
// Place import statement at the top of your VCL file
// This loads vmod from a standard location
import event4;

// Or load vmod from a specific file
import event4 from "path/to/libevent4.so";
```
